--- a/style.css
+++ b/style.css
@@ -1,15 +1,41 @@
+:root {
+  --primary_green: #004c0e;
+  --filling_green: #d6fffe;
+  --border_radius: 7px;
+}
+
 * {
-	* margin: 0;
-	* padding: 0;
-	* box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-	font-family: 'Roboto', sans-serif;
-	
-	background-image:url(./imgs/BACKGROUND.png);
-	background-position: top;
-	background-size: fill;
-
+  font-family: "Roboto", sans-serif;
+  background-image: url(./imgs/BACKGROUND.png);
+  background-position: top;
+  background-size: fill;
+  position: relative;
 }
 
+.heading_main {
+  color: var(--primary_green);
+  font-size: 38px;
+  font-weight: 700;
+  text-align: center;
+  padding: 30px;
+  text-transform: uppercase;
+}
+
+.parent {
+  width: 326px;
+  background-color: var(--filling_green);
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translate(-50%, 5%);
+  border-radius: var(--border_radius);
+  border: 4px solid var(--primary_green);
+  height: 414px;
+  box-shadow: 8px 9px 14px 5px rgba(0, 0, 0, 0.316);
+}
