--- a/style.css
+++ b/style.css
@@ -34,4 +34,57 @@ body {
   border: 4px solid var(--primary_green);
   position: absolute;
   transform: translate(40vw, 1vh);
+  box-shadow: 8px 9px 14px 5px rgba(0, 0, 0, 0.32);
+}
+
+.message {
+  padding: 20px;
+  margin-bottom: 30px;
+  letter-spacing: 1.7px;
+}
+
+.message_text {
+  display: block;
+}
+
+.display_container {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.display {
+  display: inline-block;
+  width: 165px;
+  height: 77px;
+  background-color: var(--filling_green_dark);
+  border: 4px solid var(--primary_green);
+  border-radius: var(--border_radius);
+}
+
+input::placeholder {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 16px;
+  padding-left: 15px;
+  font-weight: 700;
+  color: var(--primary_green);
+}
+
+.btn {
+  width: 230px;
+  height: 55px;
+  font-size: 24px;
+  font-weight: bold;
+  border: 4px solid var(--primary_green);
+  margin-bottom: 20px;
+  border-radius: var(--border_radius);
+  text-transform: uppercase;
+}
+
+.submit {
+  background-color: var(--filling_green_dark);
+}
+
+.reset {
+  background-color: #a4fff6;
 }
